<resources>
    <string name="app_name">&app_name;</string>
    <string name="welcome_to_app">Добро пожаловать в &app_name;!</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="welcome_back">C возвращением!</string>
    <string name="no_connection">Доступ к интернету отсутствует</string>
    <string name="server_temporarily_unavailable">Сервер временно недоступен</string>
    <string name="server_unavailable">Сервер недоступен</string>
    <string name="you_are_offline">Вы оффлайн</string>
    <string name="with_google">Продолжить с Google</string>
    <string name="use_email">Использовать эл. почту</string>
    <string name="sign_in">Войти</string>
    <string name="main_menu_authorization_method">Выберите способ авторизации</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="create_new_account">Создать новый аккаунт</string>
    <string name="false_password">Пароль введён неверно</string>
    <string name="too_short_password">Пароль должен быть не короче 6 символов</string>
    <string name="user_already_exists">Данный аккаунт уже существует</string>
    <string name="user_already_exists_button_text">Войти в аккаунт</string>
    <string name="incorrect_mail">Проверьте правильность ввода эл. почты</string>
    <string name="incorrect_password">Пароль неверный, проверьте правильность ввода</string>
    <string name="no_user_with_mail">Данный аккаунт не найден, проверьте правильность ввода эл. почты</string>
    <string name="account_already_exists">Введите электронную почту</string>
    <string name="authorization_email_hint">Электронная почта</string>
    <string name="user_name">Никнейм</string>
    <string name="name">Имя</string>
    <string name="user_name_hint">Введите имя пользователя</string>
    <string name="name_hint">Введите имя</string>
    <string name="bio_hint">Введите что-нибудь о себе</string>
    <string name="authorization_password_hint">Пароль</string>
    <string name="navigation_bar_first">Обучение</string>
    <string name="navigation_bar_second">Состязания</string>
    <string name="navigation_bar_third">Достижения</string>
    <string name="settings">Настройки</string>
    <string name="app_theme">Тема приложения</string>
    <string name="offline_mode">Оффлайн режим</string>
    <string name="language">Язык</string>
    <string name="sign_out">Выйти из аккаунта</string>
    <string name="help">Помощь</string>
    <string name="learning">Обучение</string>
    <string name="chapter_full_progress">Прогресс: Завершено</string>
    <string name="chapter_completed_progress">Прогресс: Завершено</string>
    <string name="tasks_toolbar_title">Задания</string>
    <string name="level_number">%1$d Уровень</string>
    <string name="level">Уровень</string>
    <string name="level_small_letter">уровень</string>
    <string name="current_level_XP">Опыт: %1$d/%2$d</string>
    <string name="true_answer">Вы ответили верно!</string>
    <string name="false_answer">Правильный ответ:</string>
    <string name="exercise_type_9_false_snackbar_title">Ваш результат:</string>
    <string name="try_again">Попробовать снова</string>
    <string name="to_settings">Перейти в настройки</string>
    <string name="to_offline_mode">Перейти в оффлайн режим</string>
    <string name="incorrect_time_layout_title">Что-то пошло не так</string>
    <string name="incorrect_time_layout_subtitle_first_part">Кажется, время на вашем телефоне установлено неправильно.</string>
    <string name="incorrect_time_layout_subtitle_second_part">Пожалуйста, сделайте ваше время автоматическим и нажмите \"Попробовать снова\".</string>
    <string name="true_variant">Правда</string>
    <string name="and">и</string>
    <string name="false_variant">Неправда</string>
    <string name="check">Проверить</string>
    <string name="begin">Начать</string>
    <string name="authorization">Авторизация</string>
    <string name="issues_with_connecting">Мы испытываем трудности с вашим интернет соединением</string>
    <string name="sign_out_dialog_alert_title">Выйти из аккаунта?</string>
    <string name="sign_out_dialog_alert_subtitle">В следующий раз вам придётся ввести пароль повторно</string>
    <string name="exercises_bad_connection_dialog_alert_title">Плохое интернет соединение</string>
    <string name="exercises_bad_connection_dialog_alert_subtitle">Мы испытываем трудности с вашим интернет соединением. Вы можете подождать, пока соединение восстановится, или перейти в оффлайн режим. При переходе в оффлайн режим ваш прогресс будет сохранён.</string>
    <string name="exercises_close_dialog_alert_title">Покинуть урок?</string>
    <string name="exercises_close_dialog_alert_subtitle">Весь прогресс будет утерян</string>
    <string name="unsaved_changes_dialog_alter_title">Покинуть страницу?</string>
    <string name="edit_profile_user_name_available">Данное имя доступно</string>
    <string name="edit_profile_user_name_is_taken">Данное имя уже занято</string>
    <string name="edit_profile_user_name_unavailable">Данное имя недоступно</string>
    <string name="verifying">Проверка…</string>
    <string name="unsaved_changes_dialog_alter_subtitle">У вас есть несохраненные изменения, которые будут утеряны</string>
    <string name="unsaved_changes_dialog_alter_right_button">Покинуть</string>
    <string name="cancel">Отменить</string>
    <string name="wait">Подождать</string>
    <string name="leave">Покинуть</string>
    <string name="apply">Применить</string>
    <string name="save">Сохранить</string>
    <string name="russian">Русский</string>
    <string name="english">English</string>
    <string name="light_theme">Светлая тема</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="exercise_type_1_title">%1$s=%2$s</string>
    <string name="exercise_type_2_3_title">%1$s=?</string>
    <string name="exercise_type_4_right_text">%1$s=%2$s</string>
    <string name="exercise_type_6_result">=%1$s</string>
    <string name="exercise_type_5_title">%1$s … %2$s=%3$s</string>
    <string name="exercise_type_7_title">%1$s%2$s … =%3$s</string>
    <string name="exercise_type_3_hint">Введите правильный ответ</string>
    <string name="exercise_type_11_hint">Сколько чисел %1$s вы\nвидите?</string>
    <string name="next">Далее</string>
    <string name="good_job">Хорошая работа!</string>
    <string name="more">Подробнее</string>
    <string name="complete">Завершить</string>
    <string name="stat">Статистика</string>
    <string name="bigger">больше</string>
    <string name="lower">меньше</string>
    <string name="detailed_stat">Подробная статистика</string>
    <string name="detailed_stat_title1">Получено опыта</string>
    <string name="detailed_stat_title2">Затраченное время</string>
    <string name="detailed_stat_time">Затраченное время</string>
    <string name="detailed_stat_title3">Правильных ответов</string>
    <string name="detailed_stat_title4">Совершено ошибок</string>
    <string name="user_stat_title1">Получено опыта</string>
    <string name="user_stat_title2">Потрачено времени</string>
    <string name="user_stat_title3">Пройдено уроков</string>
    <string name="user_stat_title4">Количество тренировок</string>
    <string name="user_stat_title5">Достижения</string>
    <string name="answers_percent">%1$d%% правильных ответов</string>
    <string name="share">Поделиться</string>
    <string name="division_by_0">Деление на ноль невозможно</string>
    <string name="hours">ч</string>
    <string name="minutes">мин</string>
    <string name="seconds">сек</string>
    <string name="exercises_description_title">Введение</string>
    <string name="interesting_explanation_title">Объяснение</string>
    <string name="interesting_explanation_rating">Понравился фокус?</string>
    <string name="interesting_explanation_rating_thanks">Спасибо за отзыв!</string>
    <string name="continue_string">Продолжить</string>
    <string name="exercise_image_0_count">Ни один эмоджи</string>
    <string name="exercises_XP_result">+%1$d XP</string>
    <string name="exercises_XP_bonus">+%1$d XP бонус</string>
    <string name="new_level">Уровень повышен</string>
    <string name="server_client_id">568009941526-4te9dh9l7vnfo22bmi9hfdk9q5ae3eqp.apps.googleusercontent.com</string>
    <string name="custom_bottom_sheet_behavior" translatable="false">com.studita.presentation.views.custom_bottom_sheet.CustomBottomSheetBehavior</string>
    <string name="studita_account">&app_name;</string>
    <string name="exercise_snackbar_chapter_completed_reason">Поздравляем! Вы полностью завершили всю тему!</string>
    <string name="exercise_snackbar_bad_result_reason">Мы советуем пройти это задание ещё раз, чтобы закрепить свои знания</string>
    <string name="drum_roll_title">Барабанная дробь!</string>
    <string name="main_menu_bottom_text">© 2021 &app_name;. Сделано с любовью</string>
    <string name="drum_roll_subtitle">Воспроизвести барабанную дробь</string>
    <string name="account_type" translatable="false">com.studita.authentication.StuditaAccount</string>
    <string name="network_absent">Нет подключения</string>
    <string name="back_online">Подключение восстановлено</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="account">Аккаунт</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="cancel_friendship_request">Отменить запрос</string>
    <string name="reject_friendship_request">Отклонить запрос в друзья</string>
    <string name="profile">Профиль</string>
    <string name="my_profile">Мой профиль</string>
    <string name="user_name_template">\@%1$s</string>
    <string name="notifications">Уведомления</string>
    <string name="friends">Друзья</string>
    <string name="privacy">Приватность</string>
    <string name="load_screen_un_logged_text">Вы не вошли в аккаунт. Ваш прогресс может быть утерян</string>
    <string name="difficulty_level">Уровень сложности</string>
    <string name="subscribe_email">Вы успешно подписались на рассылку! Когда новые задания будут доступны, вы получите письмо на почту %1$s</string>
    <string name="reject">Отклонить</string>
    <string name="add">Добавить</string>
    <string name="accept_friendship_dialog_alert_title">Добавить в друзья?</string>
    <string name="enable_offline_mode">Включить оффлайн режим</string>
    <string name="server_problems_layout_text">Мы испытываем небольшие неполадки. Попробуйте вернуться сюда позже.</string>
    <string name="internet_is_disabled_chapter_bottom_sheet_layout_subtitle">Доступ к интернету отсутсвует. Проверьте соединение или включите оффлайн режим.</string>
    <string name="offline_mode_download_error_bottom_sheet_title">Ошибка загрузки</string>
    <string name="offline_mode_download_error_bottom_sheet_network_error_subtitle">Из-за отсутствуия интернета загрузка была прервана. Попробовать снова?</string>
    <string name="offline_mode_download_error_bottom_sheet_network_error_button_text">Попробовать снова</string>
    <string name="beta_test_above_button_text">Если вы готовы приступить к бета тестированию, нажмите кнопку ниже.</string>
    <string name="beta_test_second_subtitle_part">Также мы ведём запись ваших действий в &app_name;. Это нужно для того, чтобы мы смогли увидеть причины ошибок и исправить их как можно скорее.</string>
    <string name="beta_test_first_subtitle_part">Потрясите своё устройство для того, чтобы сообщить об ошибке.</string>
    <string name="beta_test_title">Приветствуем вас!</string>
    <string name="select_course_button_text">Перейти к курсу</string>
    <string name="select_course_title">Выберите курс, с которого вы хотите начать</string>
    <string name="select_course_subtitle">Вы сможете переключиться на другой курс в любое время</string>
</resources>