<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="20dp"
    android:paddingEnd="6dp"
    android:paddingBottom="12dp">

    <TextView
        android:id="@+id/exercisesBadConnectionDialogAlertTitle"
        style="@style/Medium18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/exercises_bad_connection_dialog_alert_title" />

    <TextView
        android:id="@+id/exercisesBadConnectionDialogAlertSubtitle"
        style="@style/Regular16Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialogAlertTitleSubtitleMargin"
        android:layout_marginEnd="10dp"
        android:text="@string/exercises_bad_connection_dialog_alert_subtitle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <com.example.studita.presentation.views.press_view.PressTextView
            android:id="@+id/exercisesBadConnectionDialogLeftButton"
            style="@style/BlueTextButton16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wait" />

        <com.example.studita.presentation.views.press_view.PressTextView
            android:id="@+id/exercisesBadConnectionDialogRightButton"
            style="@style/BlueTextButton16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offline_mode" />

    </LinearLayout>


</LinearLayout>