<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="@dimen/defaultRLMargin"
    android:paddingEnd="@dimen/defaultRLMargin"
    android:paddingBottom="56dp"
    android:background="?bottom_sheet_color"
    android:layout_marginTop="@dimen/bottom_sheet_corner_radius">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <TextView
            style="@style/Medium24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/you_are_offline"
            android:textAlignment="center" />
        <TextView
            style="@style/Regular16Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/internet_is_disabled_chapter_bottom_sheet_layout_subtitle"
            android:textAlignment="center" />

        <com.example.studita.presentation.views.CenterIconTextView
            android:id="@+id/chapterBottomSheetInternetIsDisabledLayoutTryAgainButton"
            style="@style/SmallTryAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/try_again"/>

        <com.example.studita.presentation.views.press_view.PressTextView
            android:id="@+id/chapterBottomSheetInternetIsDisabledLayoutEnableOfflineModeButton"
            style="@style/BlueTextButton16"
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_offline_mode"
            app:with_min_click_interval="true"/>
    </LinearLayout>

</FrameLayout>