<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        style="@style/Medium20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/offline_mode_download_error_bottom_sheet_title"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/offlineModeDownloadErrorBottomSheetLayoutSubtitle"
        style="@style/Regular16"
        android:text="@string/offline_mode_download_error_bottom_sheet_network_error_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"/>

    <com.example.studita.presentation.views.press_view.PressTextView
        android:id="@+id/offlineModeDownloadErrorBottomSheetLayoutButton"
        style="@style/Button"
        android:text="@string/offline_mode_download_error_bottom_sheet_network_error_button_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp" />

</LinearLayout>