<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/defaultRLMargin"
    android:paddingEnd="@dimen/defaultRLMargin"
    android:background="?page_background_color">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <TextView
            style="@style/Medium24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/server_unavailable"
            android:textAlignment="center" />
        <TextView
            style="@style/Regular16Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/server_problems_layout_text"
            android:textAlignment="center" />
    </LinearLayout>

    <com.example.studita.presentation.views.CenterIconTextView
        android:id="@+id/serverProblemsLayoutButton"
        style="@style/TryAgainButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginBottom="16dp"
        android:layout_gravity="bottom"
        android:text="@string/try_again"/>

</FrameLayout>