<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/defaultRLMargin"
    android:layout_marginEnd="@dimen/defaultRLMargin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/incorrectTimeLayoutTitle"
            style="@style/Medium24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incorrect_time_layout_title"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/incorrectTimeLayoutFirstSubtitle"
            style="@style/Regular16Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/incorrect_time_layout_subtitle_first_part"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/incorrectTimeLayoutSecondSubtitle"
            style="@style/Regular16Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/incorrect_time_layout_subtitle_second_part"
            android:textAlignment="center" />

    </LinearLayout>

    <com.studita.presentation.views.CenterIconTextView
        android:id="@+id/incorrectTimeLayoutTryAgainButton"
        style="@style/TryAgainButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/buttonWithPaddingHeight" />

    <com.studita.presentation.views.press_view.PressTextView
        android:id="@+id/incorrectTimeLayoutInSettingsButton"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginBottom="16dp"
        android:layout_gravity="bottom"
        android:text="@string/to_settings" />

</FrameLayout>