<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingStart="16dp"
    android:paddingBottom="12dp"
    android:paddingEnd="6dp">

    <TextView
        android:id="@+id/acceptFriendshipDialogAlertTitle"
        style="@style/Medium18"
        android:layout_marginEnd="10dp"
        android:text="@string/accept_friendship_dialog_alert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/acceptFriendshipDialogAlertSubtitle"
        style="@style/Regular16Secondary"
        android:layout_marginTop="@dimen/dialogAlertTitleSubtitleMargin"
        android:layout_marginEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_gravity="end">

        <com.example.studita.presentation.views.press_view.PressTextView
            android:id="@+id/acceptFriendshipDialogLeftButton"
            style="@style/BlueTextButton16"
            android:text="@string/reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.example.studita.presentation.views.press_view.PressTextView
            android:id="@+id/acceptFriendshipDialogRightButton"
            style="@style/BlueTextButton16"
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>