<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/dialogPaddingStart"
    android:paddingTop="@dimen/dialogPaddingTop"
    android:paddingEnd="@dimen/dialogPaddingEnd"
    android:paddingBottom="@dimen/dialogPaddingBottom">

    <TextView
        android:id="@+id/dialogAlertTitle"
        style="@style/Medium18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dialogTextMarginEnd"
        android:text="@string/accept_friendship_dialog_alert_title" />

    <TextView
        android:id="@+id/dialogAlertSubtitle"
        style="@style/Regular16Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialogAlertTitleSubtitleMargin"
        android:layout_marginEnd="@dimen/dialogTextMarginEnd" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/dialogButtonsMarginTop"
        android:orientation="horizontal">

        <com.example.studita.presentation.views.press_view.PressTextView
            android:id="@+id/dialogAlertLeftButton"
            style="@style/BlueTextButton16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reject" />

        <com.example.studita.presentation.views.press_view.PressTextView
            android:id="@+id/dialogAlertRightButton"
            style="@style/BlueTextButton16"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

    </LinearLayout>


</LinearLayout>